arma-rs/tests/derive/fail_struct_map_transparent.stderr
error: #[arma(transparent)] structs must have exactly one field
 --> tests/derive/fail_struct_map_transparent.rs:3:10
  |
3 | #[derive(IntoArma, FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `IntoArma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[arma(transparent)] structs must have exactly one field
 --> tests/derive/fail_struct_map_transparent.rs:3:20
  |
3 | #[derive(IntoArma, FromArma)]
  |                    ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)
